Fixed a bunch of issues with the shared elements transition, bottom navigation can't be animated with the Transitions API at the same time as the other elements without causing issues. Updated multiple dependencies, upped compile and targetSdk to 29 and minor cleanup

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -123,7 +123,7 @@
     <string name="open_source_title">Código abierto</string>
     <string name="pinned_shortcut_snackbar">¡Acceso directo creado!</string>
     <string name="changelog_summary">Lista de cambios en información de paradas y líneas</string>
-    <string name="stop">Parada</string>
+    <string name="stop">Parada %1$s</string>
     <string name="directions_menu_item">Direcciones</string>
     <string name="schedule_menu_item">Horario</string>
     <string name="tram_line_schedule_title">Horario línea de tranvía</string>
